{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 35,
  "lineage": "6e10e307-ff43-758f-a9e5-58f533006c82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sh_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6db30f6a3bbcbfa",
            "association_id": "eipassoc-00d9de414b07c536a",
            "domain": "vpc",
            "id": "eipalloc-0d6db30f6a3bbcbfa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d7e109ed3aeb9d3c",
            "private_dns": "ip-10-0-0-26.ec2.internal",
            "private_ip": "10.0.0.26",
            "public_dns": "ec2-52-200-245-77.compute-1.amazonaws.com",
            "public_ip": "52.200.245.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sh_EIP_for_NAT"
            },
            "tags_all": {
              "Name": "sh_EIP_for_NAT"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.sh_gw",
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sh_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725452068:internet-gateway/igw-051347b4cec79d445",
            "id": "igw-051347b4cec79d445",
            "owner_id": "851725452068",
            "vpc_id": "vpc-0413c814f4bb28d3a"
          },
          "dependencies": [
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sh_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725452068:loadbalancer/app/sharmi-lb-asg/30b75b4cbf9610a5",
            "arn_suffix": "app/sharmi-lb-asg/30b75b4cbf9610a5",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sharmi-lb-asg-1007061606.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725452068:loadbalancer/app/sharmi-lb-asg/30b75b4cbf9610a5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sharmi-lb-asg",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ce2e6f8f7f8bde24"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a784976f8a378ab"
              },
              {
                "subnet_id": "subnet-07fba85657636c568"
              }
            ],
            "subnets": [
              "subnet-04a784976f8a378ab",
              "subnet-07fba85657636c568"
            ],
            "vpc_id": "vpc-0413c814f4bb28d3a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.sh_gw",
            "aws_security_group.sh_sg_for_elb",
            "aws_subnet.sh_subnet_1",
            "aws_subnet.sh_subnet_1a",
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sh_front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725452068:listener/app/sharmi-lb-asg/30b75b4cbf9610a5/b13c8146f2cd780f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:851725452068:targetgroup/sh-tf-lb-alb-tg/3da17d346939cc86",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725452068:listener/app/sharmi-lb-asg/30b75b4cbf9610a5/b13c8146f2cd780f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:851725452068:loadbalancer/app/sharmi-lb-asg/30b75b4cbf9610a5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sh_gw",
            "aws_lb.sh_lb",
            "aws_lb_target_group.sh_alb_tg",
            "aws_security_group.sh_sg_for_elb",
            "aws_subnet.sh_subnet_1",
            "aws_subnet.sh_subnet_1a",
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sh_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725452068:targetgroup/sh-tf-lb-alb-tg/3da17d346939cc86",
            "arn_suffix": "targetgroup/sh-tf-lb-alb-tg/3da17d346939cc86",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725452068:targetgroup/sh-tf-lb-alb-tg/3da17d346939cc86",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:851725452068:loadbalancer/app/sharmi-lb-asg/30b75b4cbf9610a5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sh-tf-lb-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0413c814f4bb28d3a"
          },
          "dependencies": [
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sh_nat_for_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6db30f6a3bbcbfa",
            "association_id": "eipassoc-00d9de414b07c536a",
            "connectivity_type": "public",
            "id": "nat-01fc73314d37f4f15",
            "network_interface_id": "eni-0d7e109ed3aeb9d3c",
            "private_ip": "10.0.0.26",
            "public_ip": "52.200.245.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07fba85657636c568",
            "tags": {
              "Name": "Sh NAT for private subnet"
            },
            "tags_all": {
              "Name": "Sh NAT for private subnet"
            }
          },
          "dependencies": [
            "aws_eip.sh_eip",
            "aws_internet_gateway.sh_gw",
            "aws_subnet.sh_subnet_1",
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sh_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725452068:route-table/rtb-0651b99f2d3396a76",
            "id": "rtb-0651b99f2d3396a76",
            "owner_id": "851725452068",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01fc73314d37f4f15",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0413c814f4bb28d3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.sh_eip",
            "aws_internet_gateway.sh_gw",
            "aws_nat_gateway.sh_nat_for_private_subnet",
            "aws_subnet.sh_subnet_1",
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sh_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725452068:route-table/rtb-07a2c18d769173491",
            "id": "rtb-07a2c18d769173491",
            "owner_id": "851725452068",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051347b4cec79d445",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0413c814f4bb28d3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sh_gw",
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sh_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a0c2b05fea901aa",
            "route_table_id": "rtb-07a2c18d769173491",
            "subnet_id": "subnet-07fba85657636c568"
          },
          "dependencies": [
            "aws_internet_gateway.sh_gw",
            "aws_route_table.sh_rt_public",
            "aws_subnet.sh_subnet_1",
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sh_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0603c4f1e950412a0",
            "route_table_id": "rtb-07a2c18d769173491",
            "subnet_id": "subnet-04a784976f8a378ab"
          },
          "dependencies": [
            "aws_internet_gateway.sh_gw",
            "aws_route_table.sh_rt_public",
            "aws_subnet.sh_subnet_1a",
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sh_rta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090d64b82d512a35f",
            "route_table_id": "rtb-0651b99f2d3396a76",
            "subnet_id": "subnet-09660f8c20c9d6489"
          },
          "dependencies": [
            "aws_eip.sh_eip",
            "aws_internet_gateway.sh_gw",
            "aws_nat_gateway.sh_nat_for_private_subnet",
            "aws_route_table.sh_rt_private",
            "aws_subnet.sh_subnet_1",
            "aws_subnet.sh_subnet_2",
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sh_sg_for_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725452068:security-group/sg-0f2cc5f1687bb58a4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f2cc5f1687bb58a4",
            "ingress": [],
            "name": "sh_sg_for_ec2",
            "name_prefix": "",
            "owner_id": "851725452068",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0413c814f4bb28d3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sh_sg_for_elb",
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sh_sg_for_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725452068:security-group/sg-0ce2e6f8f7f8bde24",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ce2e6f8f7f8bde24",
            "ingress": [],
            "name": "sh_sg_for_elb",
            "name_prefix": "",
            "owner_id": "851725452068",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0413c814f4bb28d3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sh_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725452068:subnet/subnet-07fba85657636c568",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fba85657636c568",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725452068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0413c814f4bb28d3a"
          },
          "dependencies": [
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sh_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725452068:subnet/subnet-04a784976f8a378ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a784976f8a378ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725452068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0413c814f4bb28d3a"
          },
          "dependencies": [
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sh_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725452068:subnet/subnet-09660f8c20c9d6489",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09660f8c20c9d6489",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725452068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0413c814f4bb28d3a"
          },
          "dependencies": [
            "aws_vpc.sh_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sh_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725452068:vpc/vpc-0413c814f4bb28d3a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-072626c00392edcf3",
            "default_route_table_id": "rtb-05edce83b4838deba",
            "default_security_group_id": "sg-0a2313d5a9e76320e",
            "dhcp_options_id": "dopt-0877f8bab45406362",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0413c814f4bb28d3a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05edce83b4838deba",
            "owner_id": "851725452068",
            "tags": {
              "Name": "sharmi-vpc"
            },
            "tags_all": {
              "Name": "sharmi-vpc"
            }
          }
        }
      ]
    }
  ]
}